# mkdocs-openstage-theme

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
docs/: advanced.md  configuration.md  customization.md  index.md  installation.md  theme-structure.md
docs/getting-started/: configuration.md
docs/guide/: overview.md
mkdocs_openstage_theme/: base.html  mkdocs_theme.yml
mkdocs_openstage_theme/css/: theme.css
mkdocs_openstage_theme/js/: theme.js
mkdocs_openstage_theme/partials/: announcement.html  footer.html  header.html  nav.html  search.html  toc.html
